--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.83MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-549.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-522.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-474.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-4.20MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇨🇳 中国-516.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-555.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-5.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-463.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-151.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-353.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-5.82MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-522.5KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
