--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.20MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇨🇳 中国-516.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-555.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-5.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-463.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇭🇰 香港-4.18MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇨🇳 中国-151.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-353.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
