--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.18MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-151.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-353.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-5.82MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-943.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.53MB/s(Youtube:不良林), server: 152.69.193.245, port: 80, type: vmess, uuid: 6697776b-d009-413b-8708-822ee2e02515, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.193.245}}
+  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇨🇳 中国-295.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇬🇧 英国-2.80MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇫🇷 法国-2.32MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇮🇳 印度-834.9KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
