--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-4.53MB/s(Youtube:不良林), server: 152.69.193.245, port: 80, type: vmess, uuid: 6697776b-d009-413b-8708-822ee2e02515, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.193.245}}
-  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
-  - {name: 🇨🇳 中国-295.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-8.08MB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35212, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇸🇬 新加坡-3.79MB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇬🇧 英国-2.80MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇫🇷 法国-2.32MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-295.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.80MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
